ajout des pages et controlleur pour lister

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -20,6 +20,6 @@ td {
 h1{
     text-align:center;
 }
-.ajouterSpot{
+.ajouterSpot, .ajouterVoie, .ajouterLongueur, .ajouterSecteur{
     text-align: right;
 }
